frontend/overlays/enjoy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enjoy-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:255260635764:certificate/7183d7bb-befe-4c9f-846e-a997d7077db6
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enjoy-front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: enjoy-back-service
                port:
                  number: 8080
    - host: epflswu.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enjoy-front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: enjoy-back-service
                port:
                  number: 8080
